# duce

./: duce.cabal  stack.yaml
test/: Main.hs
test/Duce/Test/Suites/: Transducer.hs
