cabal-version: 3.0

name: duce
version: 0.1
synopsis: Pure data-crunching toolkit
homepage: https://github.com/nikita-volkov/duce
bug-reports: https://github.com/nikita-volkov/duce/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019 Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: git://github.com/nikita-volkov/duce.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLists, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    Duce.Mealy
    Duce.Reducer
    Duce.Transducer
  other-modules:
    Duce.Prelude
    Duce.Defs
    Duce.Text
    Duce.Vector
    Duce.Vector.Mutable
    Duce.Util.Multimap
  build-depends:
    attoparsec >=0.13 && <0.15,
    base >=4.9 && <5,
    bytestring >=0.10 && <0.12,
    cereal >=0.5.8.2 && <0.6,
    comonad >=5 && <6,
    conduit >=1.3.4.2 && <1.4,
    containers >=0.6.2 && <0.7,
    deque >=0.4.3 && <0.5,
    foldl >=1.4.7 && <1.5,
    hashable >=1.2 && <2,
    lzma-conduit >=1.2.2 && <1.3,
    machines >=0.7 && <0.8,
    profunctors >=5 && <6,
    selective >=0.4 && <0.6,
    semigroupoids >=5 && <6,
    strict-list >=0.1.5 && <0.2,
    text >=1 && <2,
    unordered-containers >=0.2.10 && <0.3,
    vector >=0.12 && <0.13
